<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_security"
            android:title="@string/nav_security" />
        <item
            android:id="@+id/nav_staff"
            android:title="@string/nav_staff" />
        <item
            android:id="@+id/nav_visitor_history"
            android:title="@string/nav_visitor_history" />
        <item
            android:id="@+id/nav_role_management"
            android:title="@string/nav_role_management" />
        <item
            android:id="@+id/nav_incident_reports"
            android:title="@string/incident_reports" />
        <item
            android:id="@+id/nav_ai_report"
            android:title="@string/nav_ai_report" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>